2005-11-16  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcDirCacheProduce):
	* src/fccharset.c (FcCharSetDistributeBytes):
	* src/fcfs.c (FcFontSetDistributeBytes):
	* src/fcint.h:
	* src/fclang.c (FcLangSetDistributeBytes):
	* src/fcname.c (FcObjectDistributeBytes):
	* src/fcpat.c (FcPatternNeededBytes, FcValueListNeededBytes,
		FcStrNeededBytes):
	
	Add *NeededBytesAlign(), which overestimates the padding which is
	later added by the new ALIGN macro.  Fix alignment problems on
	ia64 and s390 by bumping up block_ptr appropriately.  (Earlier
	version by Andreas Schwab).

2005-11-16  Stephan Kulow  <coolo@kde.org>
	reviewed by: plam
	
	* src/fccache.c:

	Use sysconf to determine proper PAGESIZE value; this
	appears to be POSIX-compliant. (reported by Andreas Schwab)

2005-11-04  Patrick Lam  <plam@mit.edu>
	* fc-lang/fc-lang.c:
	* src/fccharset.c:
	* src/fcint.h:
	* src/fclang.c:

	Fix bug 2878 (excessive relocations at startup for charsets,
	reported by Ross Burton): fc-lang/fc-lang now creates the
	static form of the langset, not the dynamic form, so that
	the charsets should now be in .rodata.

2005-11-04  Patrick Lam  <plam@mit.edu>
	* src/fcdir.c (FcDirScanConfig):

	Add test for validity of directory caches that
	somehow got lost (reported by make distcheck).

2005-11-04  Patrick Lam  <plam@mit.edu>
	* ChangeLog:
	* README:
	* configure.in:
	* fontconfig/fontconfig.h:
	
        Bump version to 2.3.92.

2005-11-02  Patrick Lam  <plam@mit.edu>
	* src/fcpat.c (FcPatternDuplicate):

	Fix argument ordering problem in call to FcPatternTransferFullFname.

2005-11-02  Patrick Lam  <plam@mit.edu>
	* src/fcfreetype.c (FcFreetypeQuery):
	* src/fcpat.c (FcPatternDestroy, FcPatternDuplicate, 
	               FcPatternTransferFullFname):

	Fix warnings and embarrassing double-free error.

2005-11-02  Zhe Su  <zsu@novell.com>
	reviewed by: plam
	
	* fonts.conf.in:

	Change the rule for artificial emboldening in fonts.conf.in.  This